tests/ui/g-par-role-conflict.stderr
error[E0080]: evaluation panicked: parallel lanes must use disjoint (role, lane) pairs
 --> tests/ui/g-par-role-conflict.rs:9:13
  |
9 |     let _ = g::par(lane_a, lane_b);
  |             ^^^^^^^^^^^^^^^^^^^^^^ evaluation of `_` failed inside this call
  |
note: inside `par::<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, StepNil>>`
 --> src/global.rs
  |
  |     program::par_binary(left, right)
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::program::par_binary::<StepCons<SendStep<Role<0>, Role<1>, hibana::global::Message<hibana::global::LabelMarker<3>, ()>>, StepNil>, StepCons<SendStep<Role<0>, Role<2>, hibana::global::Message<hibana::global::LabelMarker<4>, ()>>, StepNil>>`
 --> src/global/program.rs
  |
  |         panic!("parallel lanes must use disjoint (role, lane) pairs");
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
